# mamadoc

./: .env.example  .gitignore  LICENSE  README.md  monitor.bat  pyproject.toml  requirements.txt
mamadoc/: __init__.py  app.py  cli.py  config.py  db.py  process_pdf.py  prompt.py  watcher.py
src/: app.py  config.py  db.py  process_pdf.py  watcher.py
